# trabia-llm

./: .dockerignore  Dockerfile  README.md  env.example  pyproject.toml  yoyo.ini
docker/: compose-dev.yml  dev.sh
docs/: relatorio.txt  uso_ia_generativa.json
migrations/: 20260623_01_kLUMT-baseline.sql
src/: main.py  migrate.py  run_ingestion.py  search.py  settings.py
src/ai/: llm.py  models.py
src/domain/cpmidoc/: dao.py  models.py  service.py
src/ingest/: chunker.py  embedder.py  loader.py  models.py
test/: conftest.py  test_ingest_ai_integration.py
test/ai/: test_ai.py
test/ingest/: test_ingest.py  test_loader.py
